infra/k8s/auth-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  
  template:
    metadata:
      labels:
        app: auth
    
    spec:
      containers:
      - name: auth
        image: sadabkhan/auth:latest
---
apiVersion: v1
kind: Service
metadata:
  name: auth-srv

spec:
  #type: ClusterIp default type no need to mention
  selector:
    app: auth
  
  ports:
    - name: auth
      protocol: TCP
      port: 4000
      targetPort: 4000
