infra/k8s/mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo
  
  template:
    metadata:
      labels:
        app: mongo
    
    spec:
      containers:
      - name: mongo
        image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-srv

spec:
  #type: ClusterIp default type no need to mention
  selector:
    app: mongo
  
  ports:
    - name: mongo
      protocol: TCP
      port: 27017
      targetPort: 27017
