infra/k8s/mongo-order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-orders-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-orders
  
  template:
    metadata:
      labels:
        app: mongo-orders
    
    spec:
      containers:
      - name: mongo-orders
        image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-orders-srv

spec:
  #type: ClusterIp default type no need to mention
  selector:
    app: mongo-orders
  
  ports:
    - name: mongo-orders
      protocol: TCP
      port: 27017
      targetPort: 27017
