infra/k8s/mongo-payment-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-payment-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-payment
  
  template:
    metadata:
      labels:
        app: mongo-payment
    
    spec:
      containers:
      - name: mongo-payment
        image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-payment-srv

spec:
  #type: ClusterIp default type no need to mention
  selector:
    app: mongo-payment
  
  ports:
    - name: mongo-payment
      protocol: TCP
      port: 27017
      targetPort: 27017
