infra/k8s/mongo-tic-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-tickets-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-tickets
  
  template:
    metadata:
      labels:
        app: mongo-tickets
    
    spec:
      containers:
      - name: mongo-tickets
        image: mongo

---
apiVersion: v1
kind: Service
metadata:
  name: mongo-tickets-srv

spec:
  #type: ClusterIp default type no need to mention
  selector:
    app: mongo-tickets
  
  ports:
    - name: mongo-tickets
      protocol: TCP
      port: 27017
      targetPort: 27017
