infra/k8s/order-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  
  template:
    metadata:
      labels:
        app: order
    
    spec:
      containers:
      - name: order
        image: sadabkhan/order:latest
---
apiVersion: v1
kind: Service
metadata:
  name: order-srv

spec:
  #type: ClusterIp default type no need to mention
  selector:
    app: order
  
  ports:
    - name: order
      protocol: TCP
      port: 4000
      targetPort: 4000
