infra/k8s/redis-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  
  template:
    metadata:
      labels:
        app: redis
    
    spec:
      containers:
      - name: redis
        image: redis

---
apiVersion: v1
kind: Service
metadata:
  name: redis-srv

spec:
  #type: ClusterIp default type no need to mention
  selector:
    app: redis
  
  ports:
    - name: redis
      protocol: TCP
      port: 6379
      targetPort: 6379
