infra/k8s/ticket-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ticket-depl

spec:
  replicas: 1
  selector:
    matchLabels:
      app: ticket
  
  template:
    metadata:
      labels:
        app: ticket
    
    spec:
      containers:
      - name: ticket
        image: sadabkhan/ticket:latest
---
apiVersion: v1
kind: Service
metadata:
  name: ticket-srv

spec:
  #type: ClusterIp default type no need to mention
  selector:
    app: ticket
  
  ports:
    - name: ticket
      protocol: TCP
      port: 4000
      targetPort: 4000
