infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - path: /api/users/?(.*)
        pathType: Exact
        backend:
          service:
            name: auth-srv
            port:
              number: 4000

      - path: /api/tickets/?(.*)
        pathType: Exact
        backend:
          service:
            name: ticket-srv
            port:
              number: 4000
      
      - path: /api/orders/?(.*)
        pathType: Exact
        backend:
          service:
            name: order-srv
            port:
              number: 4000

      - path: /api/payments/?(.*)
        pathType: Exact
        backend:
          service:
            name: payment-srv
            port:
              number: 4000
